syntax ="proto3";
package go_grpc;

option go_package = "pb/produk";

service ProductClient {
    rpc GetProduks(Empty) returns(Product);
    rpc GetProduk(Id) returns(Product);
    rpc CreateProduk(Product) returns(Id);
    rpc UpdateProduk(Product) returns(Status);
    rpc DeleteProduk(Id) returns(Status);
}

message Empty{}

message Product{
    uint64 id = 1;
    string nama_produk = 2;
    string kategori = 3;
    double harga = 4;
    uint32 stok = 5;
    string deskripsi = 6;
    Spesifikasi spesifikasi = 7;
    string merek = 8;
    string tanggal_rilis = 9;
    double rating = 10;
    repeated Ulasan ulasan = 11;
}

message Spesifikasi{
    string procesor = 1;
    string ram = 2;
    string penyimpanan = 3;
    string layar = 4;
    string grafis = 5;
}

message Ulasan{
    uint64 id_ulasan = 1;
    string nama_pelanggan = 2;
    string tanggal_ulasan = 3;
    string komentar = 4;
    float rating = 5;
}

message Id{
    uint64 id = 1;
}

message Status{
    uint32 status = 1;
}